# django-boilerplate

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  conftest.py  fabfile.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
apps/core/: helpers.py
apps/core/abstract/: models.py
apps/users/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
apps/users/tests/: factories.py  test_api.py
boilerplate/makecommand/: example.py
boilerplate/startapp/: serializers.py  urls.py
boilerplate/startapp/tests/: factories.py  test_api.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  staging.py  test.py
environments/development/: docker-compose.yml.example
environments/production/: app.env.example  docker-compose.yml.example
environments/staging/: docker-compose.yml.example
